# kmac

./: CMakeLists.txt  LICENSE.md  README.md  package.xml
include/kmac/: bounds.h  kmac.h
src/: kmac.cpp
test/: kmac_test.cpp
